--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "lemon",
   "version": "1.0.0",
-  "description": "",
   "main": "gulpfile.js",
   "scripts": {
     "server": "json-server --watch authentication.json"
@@ -25,5 +24,14 @@
   },
   "dependencies": {
     "json-server": "^0.16.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Icoder9699/lemon-vanilla-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Icoder9699/lemon-vanilla-js/issues"
+  },
+  "homepage": "https://github.com/Icoder9699/lemon-vanilla-js/dist/index.html",
+  "description": ""
 }
