--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
     "url": "https://github.com/Icoder9699/lemon-vanilla-js/issues"
   },
   "homepage": "https://github.com/Icoder9699/lemon-vanilla-js/blob/master/dist/index.html",
-  "description": ""
+  "description": "test"
 }
